syntax = "proto3";

option go_package = "github.com/weazyexe/fonto-server/internal/proto/greeter";

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string name = 1;
}